fix: overflow-x hidden;

--- a/css/register.css
+++ b/css/register.css
@@ -14,6 +14,7 @@ body {
   font-family: 'GmarketSansMedium';
   background-image: url('../img/main-frame.png');
   background-size: cover;
+  overflow-x: hidden;
 }
 
 .footer {
